# librats

klib/: build.gradle.kts  settings.gradle.kts
klib/gradle/: libs.versions.toml
klib/jni/: build.gradle.kts
klib/rats/: build.gradle.kts
kmp/: .gitignore  settings.gradle.kts
kmp/jni/: build.gradle.kts
kmp/jni/src/main/cpp/: CMakeLists.txt  librats_jni.cpp
kmp/jni/src/main/kotlin/com/librats/: RatsClient.kt
kmp/jni/src/main/kotlin/com/librats/jni/: RatsJni.kt
kmp/notes/: cpp-lib-in-kmp.md
kmp/rats/: build.gradle.kts
kmp/rats/src/androidMain/kotlin/com/librats/: Rats.kt
kmp/rats/src/commonMain/kotlin/com/librats/: Rats.kt
kmp/rats/src/jvmMain/kotlin/com/librats/: Rats.kt
src/subsystems/: file_transfer.cpp  file_transfer.h
src/util/: fs.cpp  fs.h
tests/: test_filexfer.cpp  test_fs.cpp
